<?xml version="1.0"?>
<package format="2">
    <name>roboy_simulation</name>
    <version>0.0.0</version>
    <description>The roboy_simulation package</description>
    <maintainer email="aliona.kharchenko@gmail.com">Aliona Kharchenko</maintainer>
    <maintainer email="simon.trendel@tum.de">Simon Trendel</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>roscpp</depend>
    <depend>rosbag</depend>
    <depend>std_msgs</depend>

    <depend>message_generation</depend>
    <depend>message_runtime</depend>
    <depend>control_toolbox</depend>
    <depend>controller_manager</depend>
    <depend>gazebo</depend>
    <depend>gazebo_ros_control</depend>
    <depend>rviz</depend>
    <depend>geometry_msgs</depend>
    <depend>common_utilities</depend>
    <depend>roboy_communication_middleware</depend>

    <export>
        <roboy_simulation plugin="${prefix}/myomuscle_plugin.xml"/>
    </export>
</package>
